test/mutation_analysis/s0326_power_of_three/hafis/o3/mutants/13/result.txt
./test/mutation_analysis/s0326_power_of_three/hafis/o3/mutants/13/Solution.java:26: error: unreachable statement
        return true;
        ^
1 error
